--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
         <artifactId>commons</artifactId>
         <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
